# search_engine

./: .gitignore  README.md  pyproject.toml
doc/: dev_plan.md  takeaway.md
src/furnsearch/: config.py
tests/: test_config.py
